--- a/index.html
+++ b/index.html
@@ -2,258 +2,272 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Registro de EPI - Raízen Mundial</title>
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-    body { background: #f4f7f6; color: #333; min-height: 100vh; padding: 20px; }
-    header { background: linear-gradient(90deg, #2e7d32, #388e3c); color: white; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2); margin-bottom: 30px; }
-    header h1 { font-size: 2em; }
-    form { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); max-width: 600px; margin: 0 auto 40px auto; }
-    label { display: block; margin-top: 15px; font-weight: bold; color: #2e7d32; }
-    select, input[type="text"] { width: 100%; padding: 12px; margin-top: 5px; border: 1px solid #ccc; border-radius: 8px; transition: all 0.3s; }
-    select:focus, input[type="text"]:focus { border-color: #388e3c; outline: none; box-shadow: 0 0 5px rgba(56,142,60,0.5); }
-    button { margin-top: 20px; width: 100%; padding: 14px; background: #388e3c; color: white; border: none; border-radius: 10px; font-size: 18px; cursor: pointer; transition: all 0.3s; }
-    button:hover { background: #2e7d32; }
-    #codigoSelecionado { margin-top: 12px; font-weight: 700; font-size: 20px; color: #2e7d32; text-align: center; min-height: 28px; }
-
-    .registros { max-width: 950px; margin: 0 auto 40px auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
-    .card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); position: relative; transition: transform 0.2s, box-shadow 0.2s; }
-    .card:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
-    .card p { margin-bottom: 8px; }
-    .card .label { font-weight: bold; color: #388e3c; }
-    .deleteBtn { background:#e53935; color:white; border:none; padding:6px; border-radius:5px; cursor:pointer; position: absolute; width: 50px; right: 10px; bottom: 15px; font-size: 14px; transition: background 0.3s; }
-    .deleteBtn:hover { background: #b12b24; }
-    h2 { text-align: center; color: #2e7d32; margin-bottom: 15px; }
-    #searchCS { max-width: 600px; margin: 0 auto 30px auto; padding: 12px; border-radius: 8px; border: 1px solid #ccc; display: block; }
-
-    table { width: 90%; max-width: 600px; margin: 0 auto 40px auto; border-collapse: collapse; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    th, td { border: 1px solid #ddd; padding: 12px; text-align: center; }
-    th { background: #2e7d32; color: white; }
-    tr:nth-child(even) { background: #f9f9f9; }
-    @media (max-width: 650px) { .registros { grid-template-columns: 1fr; } form, #searchCS, table { width: 95%; } }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Controle de EPI</title>
 </head>
 <body>
-  <header>
-    <h1>Registro de EPI - Raízen Mundial</h1>
-  </header>
+  <h1>Controle de EPI</h1>
 
-  <form id="epiForm">
-    <label for="cs">CS da Pessoa:</label>
-    <input type="text" id="cs" placeholder="Digite o CS" required />
+  <label for="cs">CS:</label>
+  <input type="text" id="cs" placeholder="Digite o CS"><br><br>
 
-    <label for="tipoEpi">Tipo de EPI:</label>
-    <select id="tipoEpi" required>
-      <option value="">Selecione...</option>
-      <option value="capacete">Capacete</option>
-      <option value="oculos">Óculos</option>
-      <option value="botina">Botina</option>
-      <option value="colete">Colete</option>
-      <option value="protetorAuricular">Protetor Auricular</option>
-      <option value="luvas">Luvas</option>
-      <option value="uniforme">Uniforme</option>
-    </select>
+  <label for="tipoEpi">Tipo de EPI:</label>
+  <select id="tipoEpi" onchange="atualizarModelos()">
+    <option value="">Selecione</option>
+  </select><br><br>
 
-    <label for="codigoEpi">Tamanho:</label>
-    <select id="codigoEpi" required disabled>
-      <option value="">Selecione o tipo de EPI primeiro</option>
-    </select>
+  <label for="modeloEpi">Modelo:</label>
+  <select id="modeloEpi" onchange="atualizarTamanhos()">
+    <option value="">Selecione</option>
+  </select><br><br>
 
-    <div id="codigoSelecionado"></div>
+  <label for="tamanhoEpi">Tamanho:</label>
+  <select id="tamanhoEpi" onchange="mostrarCodigo()">
+    <option value="">Selecione</option>
+  </select><br><br>
 
-    <label for="motivo">Motivo:</label>
-    <input type="text" id="motivo" placeholder="Digite o motivo do uso" required />
+  <p><strong>Código:</strong> <span id="codigoEpi"></span></p>
 
-    <button type="submit">Registrar</button>
-  </form>
+  <label for="motivo">Motivo:</label>
+  <input type="text" id="motivo" placeholder="Ex: Troca, Novo, etc"><br><br>
 
-  <h2>Pesquisar por CS</h2>
-  <input type="text" id="searchCS" placeholder="Digite o CS da pessoa" />
+  <button onclick="registrarEntrega()">Registrar</button>
 
-  <div class="registros" id="listaRegistros"></div>
+  <h2>Registros</h2>
+  <ul id="listaRegistros"></ul>
 
-  <h2>Resumo Semanal</h2>
-  <table id="tabelaSemanal">
-    <thead>
-      <tr>
-        <th>Tipo de EPI</th>
-        <th>Quantidade nesta semana</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <!-- 🔥 Firebase -->
   <script type="module">
+    // 🔥 Configuração Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyCA2BCko4ya3Hdb36r6c0JU5kHega-6wok",
-      authDomain: "registrarepi-c4639.firebaseapp.com",
-      projectId: "registrarepi-c4639",
-      storageBucket: "registrarepi-c4639.firebasestorage.app",
-      messagingSenderId: "244480830849",
-      appId: "1:244480830849:web:460612bad8903a67a50c80",
-      measurementId: "G-DG0SDYYCLF"
+      apiKey: "SUA_API_KEY_AQUI",
+      authDomain: "SEU_PROJETO.firebaseapp.com",
+      projectId: "SEU_PROJETO",
+      storageBucket: "SEU_PROJETO.appspot.com",
+      messagingSenderId: "XXXXXXXXXXXX",
+      appId: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     window.db = db;
 
-    // --- Dados dos EPIs ---
-    const epiData = { /* ...seu mesmo JSON de EPIs... */ };
-    Object.assign(epiData, { /* copie daqui o bloco de dados completo igual ao seu original */ });
-
-    const tipoEpiSelect = document.getElementById("tipoEpi");
-    const codigoEpiSelect = document.getElementById("codigoEpi");
-    const codigoSelecionadoDiv = document.getElementById("codigoSelecionado");
-    const listaRegistros = document.getElementById("listaRegistros");
-    const searchCS = document.getElementById("searchCS");
-    const tabelaSemanalBody = document.querySelector("#tabelaSemanal tbody");
-    const form = document.getElementById("epiForm");
-
-    tipoEpiSelect.addEventListener("change", () => {
-      codigoEpiSelect.innerHTML = "";
-      codigoSelecionadoDiv.textContent = "";
-      const tipo = tipoEpiSelect.value;
-      if (tipo && epiData[tipo]) {
-        codigoEpiSelect.disabled = false;
-        codigoEpiSelect.innerHTML = '<option value="">Selecione o modelo/tamanho...</option>';
-        for (const modelo in epiData[tipo]) {
-          const optGroup = document.createElement("optgroup");
-          optGroup.label = modelo;
-          for (const tamanho in epiData[tipo][modelo]) {
-            const opt = document.createElement("option");
-            opt.value = `${modelo}|${tamanho}`;
-            opt.textContent = `${modelo} - ${tamanho}`;
-            optGroup.appendChild(opt);
-          }
-          codigoEpiSelect.appendChild(optGroup);
+    // 🔹 Dados dos EPIs
+    const epiData = {
+      capacete: {
+        "Suspensão Carneira com Jugular": {
+          M: "6057580",
+          G: "6014089"
         }
-      } else {
-        codigoEpiSelect.disabled = true;
-        codigoEpiSelect.innerHTML = '<option value="">Selecione o tipo de EPI primeiro...</option>';
+      },
+      oculos: {
+        "Óculos Incolor": { Único: "6016960" },
+        "Óculos Cinza": { Único: "6016961" },
+        "Óculos Ampla Visão": { Único: "6008482" }
+      },
+      botina: {
+        "Bota PVC sem Bico de Aço": {
+          35: "6002760",
+          36: "6002732",
+          37: "6002733",
+          38: "6002734",
+          39: "6002735",
+          40: "6002736",
+          41: "6002737",
+          42: "6002738",
+          43: "6002739",
+          44: "6002740",
+          45: "6018105"
+        },
+        "Bota Vaqueta com Composite": {
+          36: "6050775",
+          37: "6050761",
+          38: "6050760",
+          39: "6050734",
+          40: "6050768",
+          41: "6050744",
+          42: "6050759",
+          43: "6050733",
+          44: "6050743",
+          45: "6050732",
+          46: "6050767",
+          47: "6049174"
+        },
+        "Botina de Amarrar Antitorção": {
+          34: "6054631",
+          35: "6054630",
+          36: "6054664",
+          37: "6054622",
+          38: "6054663",
+          39: "6054672",
+          40: "6054621",
+          41: "6054683",
+          42: "6054682",
+          43: "6054681",
+          44: "6054662",
+          45: "6054661",
+          46: "6054680",
+          47: "6054671"
+        }
+      },
+      colete: {
+        "Colete Verde Limão": {
+          M: "6027671",
+          G: "6027672",
+          GG: "6039623",
+          XGG: "6057591"
+        }
+      },
+      protetorAuricular: {
+        "Plug Silicone 3 Tamanhos": {
+          P: "6016022",
+          M: "6044293",
+          G: "6057569"
+        }
+      },
+      luvas: {
+        "Luva Resistência Mecânica": {
+          8: "6043567",
+          9: "6043568",
+          10: "6047676",
+          11: "6052203"
+        }
+      },
+      uniforme: {
+        "Camisa Manga Curta": {
+          PP: "6040852",
+          P: "6040886",
+          M: "6040925",
+          G: "6040926",
+          GG: "6040927",
+          XG: "6040928"
+        },
+        "Camisa Manga Longa": {
+          PP: "6038450",
+          P: "6040931",
+          M: "6040932",
+          G: "6040933",
+          GG: "6040866"
+        },
+        "Calça Cinza": {
+          PP: "6040870",
+          P: "6040872",
+          M: "6040873",
+          G: "6040895",
+          GG: "6040897"
+        }
       }
+    };
+
+    // 🔹 Preencher tipos de EPI
+    const tipoEpi = document.getElementById("tipoEpi");
+    Object.keys(epiData).forEach(tipo => {
+      const opt = document.createElement("option");
+      opt.value = tipo;
+      opt.textContent = tipo.charAt(0).toUpperCase() + tipo.slice(1);
+      tipoEpi.appendChild(opt);
     });
 
-    codigoEpiSelect.addEventListener("change", () => {
-      const tipo = tipoEpiSelect.value;
-      const [modelo, tamanho] = codigoEpiSelect.value.split("|");
-      if (modelo && tamanho && epiData[tipo][modelo][tamanho]) {
-        const codigo = epiData[tipo][modelo][tamanho];
-        codigoSelecionadoDiv.textContent = `Código SAP: ${codigo}`;
-      } else {
-        codigoSelecionadoDiv.textContent = "";
-      }
-    });
+    // 🔹 Atualiza modelos e tamanhos
+    window.atualizarModelos = function() {
+      const tipo = tipoEpi.value;
+      const modeloSelect = document.getElementById("modeloEpi");
+      modeloSelect.innerHTML = "<option value=''>Selecione</option>";
+      document.getElementById("tamanhoEpi").innerHTML = "<option value=''>Selecione</option>";
+      document.getElementById("codigoEpi").textContent = "";
 
-    // 🔹 SALVAR REGISTRO NA NUVEM + LOCAL
-    async function salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo) {
-      const novoRegistro = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
+      if (tipo && epiData[tipo]) {
+        Object.keys(epiData[tipo]).forEach(modelo => {
+          const opt = document.createElement("option");
+          opt.value = modelo;
+          opt.textContent = modelo;
+          modeloSelect.appendChild(opt);
+        });
+      }
+    };
+
+    window.atualizarTamanhos = function() {
+      const tipo = tipoEpi.value;
+      const modelo = document.getElementById("modeloEpi").value;
+      const tamanhoSelect = document.getElementById("tamanhoEpi");
+      tamanhoSelect.innerHTML = "<option value=''>Selecione</option>";
+      document.getElementById("codigoEpi").textContent = "";
+
+      if (tipo && modelo && epiData[tipo][modelo]) {
+        Object.keys(epiData[tipo][modelo]).forEach(tam => {
+          const opt = document.createElement("option");
+          opt.value = tam;
+          opt.textContent = tam;
+          tamanhoSelect.appendChild(opt);
+        });
+      }
+    };
+
+    window.mostrarCodigo = function() {
+      const tipo = tipoEpi.value;
+      const modelo = document.getElementById("modeloEpi").value;
+      const tamanho = document.getElementById("tamanhoEpi").value;
+      const codigo = epiData[tipo]?.[modelo]?.[tamanho] || "";
+      document.getElementById("codigoEpi").textContent = codigo;
+    };
+
+    // 🔹 Registrar entrega
+    window.registrarEntrega = async function() {
+      const cs = document.getElementById("cs").value.trim();
+      const tipo = tipoEpi.value;
+      const modelo = document.getElementById("modeloEpi").value;
+      const tamanho = document.getElementById("tamanhoEpi").value;
+      const codigo = document.getElementById("codigoEpi").textContent;
+      const motivo = document.getElementById("motivo").value.trim();
+
+      if (!cs || !tipo || !modelo || !tamanho || !codigo || !motivo) {
+        alert("⚠️ Preencha todos os campos!");
+        return;
+      }
+
+      const novoRegistro = { cs, tipo, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
+
+      // 🔸 Salva localmente
+      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+      registros.push(novoRegistro);
+      localStorage.setItem("registrosEPI", JSON.stringify(registros));
+
+      // 🔸 Salva na nuvem
       try {
         await addDoc(collection(db, "registrosEPI"), novoRegistro);
-        alert("✅ Registro salvo na nuvem!");
-        carregarRegistros(); // Atualiza a lista
-      } catch (e) {
-        console.error("Erro ao salvar no Firebase:", e);
-        alert("❌ Falha ao salvar na nuvem. Registro guardado localmente.");
-        const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
-        registros.push(novoRegistro);
-        localStorage.setItem("registrosEPI", JSON.stringify(registros));
-        atualizarListaRegistros(registros);
+        console.log("✅ Salvo na nuvem");
+      } catch (err) {
+        console.error("❌ Erro ao salvar no Firestore:", err);
       }
-    }
 
-    // 🔹 CARREGAR REGISTROS DA NUVEM
-    async function carregarRegistros() {
+      atualizarListaRegistros();
+    };
+
+    // 🔹 Atualiza lista
+    window.atualizarListaRegistros = function() {
+      const lista = document.getElementById("listaRegistros");
+      lista.innerHTML = "";
+      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+
+      registros.forEach(r => {
+        const li = document.createElement("li");
+        li.textContent = `[${new Date(r.data).toLocaleString()}] CS: ${r.cs} - ${r.tipo} - ${r.modelo} (${r.tamanho}) - ${r.motivo}`;
+        lista.appendChild(li);
+      });
+    };
+
+    // 🔹 Carrega registros do Firestore
+    async function carregarRegistrosNuvem() {
       const querySnapshot = await getDocs(collection(db, "registrosEPI"));
       const registros = [];
-      querySnapshot.forEach(docSnap => {
-        registros.push({ id: docSnap.id, ...docSnap.data() });
-      });
-      localStorage.setItem("registrosEPI", JSON.stringify(registros)); // cache local
-      atualizarListaRegistros(registros);
+      querySnapshot.forEach(doc => registros.push(doc.data()));
+      localStorage.setItem("registrosEPI", JSON.stringify(registros));
+      atualizarListaRegistros();
     }
 
-    // 🔹 EXCLUIR REGISTRO
-    async function excluirRegistro(id) {
-      try {
-        await deleteDoc(doc(db, "registrosEPI", id));
-        carregarRegistros();
-      } catch (e) {
-        console.error("Erro ao excluir:", e);
-      }
-    }
-
-    // 🔹 LISTAGEM
-    function atualizarListaRegistros(registros = JSON.parse(localStorage.getItem("registrosEPI")) || []) {
-      const filtro = searchCS.value.trim().toLowerCase();
-      const filtrados = registros.filter(r => r.cs.toLowerCase().includes(filtro));
-      listaRegistros.innerHTML = "";
-      if (filtrados.length === 0) {
-        listaRegistros.innerHTML = "<p style='text-align:center;color:#888;'>Nenhum registro encontrado.</p>";
-        atualizarResumoSemanal([]);
-        return;
-      }
-      filtrados.forEach((r) => {
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <p><span class='label'>CS:</span> ${r.cs}</p>
-          <p><span class='label'>Tipo:</span> ${r.tipoEpi}</p>
-          <p><span class='label'>Modelo:</span> ${r.modelo}</p>
-          <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
-          <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
-          <p><span class='label'>Motivo:</span> ${r.motivo}</p>
-          <button class='deleteBtn' data-id='${r.id}'>Excluir</button>`;
-        listaRegistros.appendChild(card);
-      });
-      document.querySelectorAll(".deleteBtn").forEach(btn => {
-        btn.onclick = () => excluirRegistro(btn.dataset.id);
-      });
-      atualizarResumoSemanal(filtrados);
-    }
-
-    function atualizarResumoSemanal(regs) {
-      const resumo = {};
-      const hoje = new Date();
-      regs.forEach(r => {
-        const data = new Date(r.data);
-        const diff = (hoje - data) / (1000 * 60 * 60 * 24);
-        if (diff <= 7) resumo[r.tipoEpi] = (resumo[r.tipoEpi] || 0) + 1;
-      });
-      tabelaSemanalBody.innerHTML = "";
-      if (Object.keys(resumo).length === 0) {
-        tabelaSemanalBody.innerHTML = `<tr><td colspan="2">Nenhum registro nos últimos 7 dias</td></tr>`;
-        return;
-      }
-      for (const tipo in resumo) {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${tipo}</td><td>${resumo[tipo]}</td>`;
-        tabelaSemanalBody.appendChild(tr);
-      }
-    }
-
-    // --- FORM SUBMIT ---
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const cs = document.getElementById("cs").value.trim();
-      const tipoEpi = tipoEpiSelect.value;
-      const valor = codigoEpiSelect.value;
-      if (!cs || !tipoEpi || !valor) return alert("Preencha todos os campos!");
-      const [modelo, tamanho] = valor.split("|");
-      const codigo = epiData[tipoEpi][modelo][tamanho];
-      const motivo = document.getElementById("motivo").value.trim();
-      salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo);
-      form.reset();
-      codigoEpiSelect.disabled = true;
-      codigoSelecionadoDiv.textContent = "";
-    });
-
-    searchCS.addEventListener("input", () => atualizarListaRegistros());
-    carregarRegistros();
+    carregarRegistrosNuvem();
   </script>
 </body>
 </html>
